# bitrix-lead-analyzer

./: .env  .gitignore  api_server.py  bitrix_analyzer.py  daily_scheduler_with_db.py  database_models.py  enhanced_analyzer_with_db.py  lead_analyzer.py  main_app.py  pyproject.toml  test_setup.py
app/: __init__.py  config.py  logger.py  main.py
app/models/: __init__.py  analysis_result.py  lead.py
app/schedulers/: __init__.py  daily_scheduler.py
app/services/: __init__.py  bitrix_service.py  gemini_service.py  lead_analyzer.py  transcription_service.py
app/utils/: __init__.py  exceptions.py  validators.py
enhanced/: enhanced_gemini.py  enhanced_lead_analyzer.py  enhanced_scheduler.py  main_app.py
scripts/: health_check.py  migrate_config.py  setup.py
tests/: __init__.py  test_lead_analyzer.py
